--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
          <p class="s01_txt02">웹 퍼블리셔 김가은입니다.</p>
       </article>
 
-      <article class="s02" id="section2">
+      <article class="s02 scroll-fade" id="section2">
          <h2>HISTORY</h2>
 
          <div class="s02_main">
@@ -53,30 +53,30 @@
          </div>
       </article>
 
-      <article class="s03" id="section3">
+      <article class="s03 scroll-fade" id="section3">
          <h2>SKILL</h2>
 
          <ul class="skill_list">
             <li>
-               <div class="skill_circle"></div>
+               <div class="pie-chart pie-chart1"><span class="center">85%</span></div>
                <p class="skill_name">html</p>
             </li>
             <li>
-               <div class="skill_circle"></div>
+               <div class="pie-chart pie-chart2"><span class="center">80%</span></div>
                <p class="skill_name">css</p>
             </li>
             <li>
-               <div class="skill_circle"></div>
+               <div class="pie-chart pie-chart3"><span class="center">70%</span></div>
                <p class="skill_name">jquery/javascript</p>
             </li>
             <li>
-               <div class="skill_circle"></div>
+               <div class="pie-chart pie-chart4"><span class="center">70%</span></div>
                <p class="skill_name">photoshop</p>
             </li>
          </ul>
       </article>
 
-      <article class="s04" id="section4">
+      <article class="s04 scroll-fade" id="section4">
          <h2>CONTECT ME</h2>
 
          <div class="contectMail">
