--- a/index.html
+++ b/index.html
@@ -1,45 +1,203 @@
 <!DOCTYPE html>
-<html lang="en">
- <head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Swiper demo</title>
-
- <!-- Link Swiper's CSS -->
- <link rel="stylesheet" href="./swiper.min.css">
- <link rel="stylesheet" href="./style.css">
-
+<html lang="kr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
- <!-- Swiper -->
- <div class="swiper-container swiper-container-initialized swiper-container-horizontal">
-   <div class="swiper-wrapper" style="transition-duration: 0ms; transform: translate3d(-5000px, 0px, 0px);">
-     <div class="swiper-slide swiper-slide-active" id="mainTitle">Slide 1</div>
-     <div class="swiper-slide item_list">Slide 2</div>
-     <div class="swiper-slide item_list">Slide 3</div>
-     <div class="swiper-slide item_list">Slide 4</div>
-     <div class="swiper-slide item_list">Slide 5</div>
-     <div class="swiper-slide item_list">Slide 6</div>
-     <div class="swiper-slide item_list">Slide 7</div>
-     <div class="swiper-slide item_list">Slide 8</div>
-     <div class="swiper-slide item_list">Slide 9</div>
-     <div class="swiper-slide item_list">Slide 10</div>
-    </div>
-   <!-- Add Pagination -->
-   <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets">
-    <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 1"></span>
-    <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 2"></span>
-    <span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 3"></span>
-    <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 4"></span>
-   </div>
-   <!-- Add Arrows -->
- <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
 
- <!-- Swiper JS -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="./itemData.js"></script>
- <script src="./swiper.min.js"></script>
- <script src="./index.js"></script>
+    <div class="scroll_progress">
+        <p></p>
+    </div>
+
+    <section id="intro">
+    </section>
+
+    <article class="its_me">
+        <div class="my_photo"></div>
+        <div class="hello">
+            <ul class="page_nav">
+                <li>
+                    <a href="#intro">#메인</a>
+                </li>
+                <li>
+                    <a href="#about">#경력</a>
+                </li>
+                <li>
+                    <a href="#skills">#스킬</a>
+                </li>
+                <li>
+                    <a href="#work">#작업</a>
+                </li>
+            </ul>
+
+            <p class="intro_txt">인트로텍스트.</p>
+
+            <div class="contect_me">
+                <p><span class="fwB fs18">이름 </span><br> 나이 <br> <a href="#">연락처</a> <br> <a href="#">메일</a></p>
+            </div>
+        </div>
+    </article>
+
+    <section id="about">
+        <div class="wd90">
+            <div class="about_cont com_fadein">
+                <h2>경력사항</h2>
+                <ul class="history_list">
+                    <li class="now_click" data-tab="university"><a href="javascript:void(0);">경력1</a></li>
+                    <li class="no_click" data-tab="dutyFreeShop"><a href="javascript:void(0);">경력2</a></li>
+                    <li class="no_click" data-tab="walkingHoliday"><a href="javascript:void(0);">경력3</a></li>
+                    <li class="no_click" data-tab="training"><a href="javascript:void(0);">경력4</a></li>
+                    <li class="no_click" data-tab="WebP_W"><a href="javascript:void(0);">경력5</a></li>
+                </ul>
+                <div class="history_main">
+                    <div class="com_page university openPage" id="university">
+                        <h3>경력1</h3>
+                        <ul class="com_list">
+                            <li>경력기술</li>
+                            <li>경력기술</li>
+                        </ul>
+                    </div>
+
+                    <div class="com_page dutyFreeShop" id="dutyFreeShop">
+                        <h3>경력2</h3>
+                        <ul class="com_list">
+                            <li>경력기술</li>
+                        </ul>
+                    </div>
+
+                    <div class="com_page walkingHoliday" id="walkingHoliday">
+                        <h3>경력3</h3>
+                        <ul class="com_list">
+                            <li>경력기술</li>
+                            <li>경력기술</li>
+                        </ul>
+                    </div>
+
+                    <div class="com_page training" id="training">
+                        <h3>경력4</h3>
+                        <ul class="com_list">
+                            <li>경력기술</li>
+                        </ul>
+                    </div>
+
+                    <div class="com_page WebP_W" id="WebP_W">
+                        <h3>경력5</h3>
+                        <ul class="com_list">
+                            <li>경력기술</li>
+                            <li>경력기술</li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="skills">
+        <div class="wd90">
+            <div class="skills_cont com_fadein">
+                <h2>스킬트리</h2>
+
+                <ul class="progress_bar">
+                    <li>
+                        <p>HTML5</p>
+                        <div>
+                            <progress id="html_bar" value="0" min="0" max="100"></progress>
+                        </div>
+                    </li>
+                    <li>
+                        <p>CSS3</p>
+                        <div>
+                            <progress id="css_bar" value="0" min="0" max="100"></progress>
+                        </div>
+                    </li>
+                    <li>
+                        <p>Javascript/Jquery</p>
+                        <div>
+                            <progress id="js_bar" value="0" min="0" max="100"></progress>
+                        </div>
+                    </li>
+                    <li>
+                        <p>Photoshop</p>
+                        <div>
+                            <progress id="ps_bar" value="0" min="0" max="100"></progress>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section id="work">
+        <div class="wd90">
+            <div class="work_cont">
+                <h2>work</h2>
+
+                <ul class="work_list">
+                    <li>
+                        <div class="list_img"></div>
+                        <p class="list_name">제목~~</p>
+                    </li>
+                    <li>
+                        <div class="list_img"></div>
+                        <p class="list_name">제목~~</p>
+                    </li>
+                    <li>
+                        <div class="list_img"></div>
+                        <p class="list_name">제목~~</p>
+                    </li>
+                    <li>
+                        <div class="list_img"></div>
+                        <p class="list_name">제목~~</p>
+                    </li>
+                    <li>
+                        <div class="list_img"></div>
+                        <p class="list_name">제목~~</p>
+                    </li>
+                    <li>
+                        <div class="list_img"></div>
+                        <p class="list_name">제목~~</p>
+                    </li>
+                    <li>
+                        <div class="list_img"></div>
+                        <p class="list_name">제목~~</p>
+                    </li>
+                    <li>
+                        <div class="list_img"></div>
+                        <p class="list_name">제목~~</p>
+                    </li>
+                    <li>
+                        <div class="list_img"></div>
+                        <p class="list_name">제목~~</p>
+                    </li>
+                    <li>
+                        <div class="list_img"></div>
+                        <p class="list_name">제목~~</p>
+                    </li>
+                    <li>
+                        <div class="list_img"></div>
+                        <p class="list_name">제목~~</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="work_detail">
+            <div id="PF_popup" class="detail_modal">
+                <div class="closeBtn"></div>
+                <div class="detail_main_cont">
+                    <p>ㅠㅠ어렵다~~~~~~~~~</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
