--- a/index.html
+++ b/index.html
@@ -137,52 +137,30 @@
             <div class="work_cont">
                 <h2>work</h2>
 
-                <ul class="work_list">
-                    <li>
-                        <div class="list_img"></div>
-                        <p class="list_name">제목~~</p>
-                    </li>
-                    <li>
-                        <div class="list_img"></div>
-                        <p class="list_name">제목~~</p>
-                    </li>
-                    <li>
-                        <div class="list_img"></div>
-                        <p class="list_name">제목~~</p>
-                    </li>
-                    <li>
-                        <div class="list_img"></div>
-                        <p class="list_name">제목~~</p>
-                    </li>
-                    <li>
-                        <div class="list_img"></div>
-                        <p class="list_name">제목~~</p>
-                    </li>
-                    <li>
-                        <div class="list_img"></div>
-                        <p class="list_name">제목~~</p>
-                    </li>
-                    <li>
-                        <div class="list_img"></div>
-                        <p class="list_name">제목~~</p>
-                    </li>
-                    <li>
-                        <div class="list_img"></div>
-                        <p class="list_name">제목~~</p>
-                    </li>
-                    <li>
-                        <div class="list_img"></div>
-                        <p class="list_name">제목~~</p>
-                    </li>
-                    <li>
-                        <div class="list_img"></div>
-                        <p class="list_name">제목~~</p>
-                    </li>
-                    <li>
-                        <div class="list_img"></div>
-                        <p class="list_name">제목~~</p>
-                    </li>
-                </ul>
+                <div class="slideArea">
+                    <ul class="work_list">
+                        <li>
+                            <div class="list_img"></div>
+                            <p class="list_name">제목~~</p>
+                        </li>
+                        <li>
+                            <div class="list_img"></div>
+                            <p class="list_name">제목~~</p>
+                        </li>
+                        <li>
+                            <div class="list_img"></div>
+                            <p class="list_name">제목~~</p>
+                        </li>
+                        <li>
+                            <div class="list_img"></div>
+                            <p class="list_name">제목~~</p>
+                        </li>
+                        <li>
+                            <div class="list_img"></div>
+                            <p class="list_name">제목~~</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
